# qgre-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/commands/: feature-loop.md
.github/workflows/: lint.yml
docs/: PILLARS.md  PLAN-engine-improvements.md  PLAN.md  SPECIAL-TOKENS-SUPERPOWER.md  TECH-SCAN-2026-03-19.md  entropy-gated-reinforcement.md  lora-merge-guide.md  prd-memory-optimizations.md  qgre-tutorial-system-spec.md  rejection-framework-memory-optimizations.md
qgre/: __init__.py  __main__.py  advantages.py  attention_bonds.py  checkpoint.py  config.py  critic.py  data.py  fused_logprobs.py  generation.py  gradient_coherence.py  hints.py  logging.py  lora_dropout.py  lora_pro.py  lora_verify.py  schema.py  segments.py  spans.py  sync_state.py  trainer.py  triton_logprobs.py  types.py  weight_bus.py  weight_export.py  weight_load.py
scripts/: run_e2e_test.py  run_long_training.py  verify_lora_checklist.py
tests/: conftest.py  test_advantages.py  test_attention_constraint.py  test_checkpoint.py  test_consistency.py  test_critic.py  test_critic_target.py  test_data.py  test_egrs_gating.py  test_egrs_integration.py  test_egrs_matrix.py  test_equivalence.py  test_fused_logprobs.py  test_hamiltonian_reward.py  test_hardening_regressions.py  test_llds.py  test_logging.py  test_lora_verify.py  test_nemo_extracted.py  test_schema.py  test_segments.py  test_smoke.py  test_spans.py  test_sync_state.py  test_trainer.py  test_triton_logprobs.py  test_tutorial.py  test_weight_loader_lifecycle.py  test_wiring.py
(+16 files in other folders)
